--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "beat-the-winds",
+  "name": "momentum-rides",
   "version": "1.0.0",
   "main": "booking.js",
   "scripts": {
@@ -11,6 +11,8 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
+    "mongoose": "^8.17.1"
   }
 }
